localization/v2.6.x/site/es/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: Esta página ofrece una lista de tutoriales para interactuar con Milvus.
title: Visión general de los tutoriales
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Visión general de los tutoriales<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Esta página proporciona una lista de tutoriales para que pueda interactuar con Milvus.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Caso práctico</th><th>Características de Milvus relacionadas</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/es/build-rag-with-milvus.md">Construir RAG con Milvus</a></td><td>RAG</td><td>Búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/how_to_enhance_your_rag.md">RAG avanzada</a></td><td>RAG</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/full_text_search_with_milvus.md">Búsqueda de texto completo con LangChain y Milvus</a></td><td>Inicio rápido</td><td>Búsqueda de texto completo</td></tr>
<tr><td><a href="/docs/es/hybrid_search_with_milvus.md">Búsqueda híbrida con Milvus</a></td><td>Búsqueda híbrida</td><td>búsqueda híbrida, multivectorial, incrustación densa, incrustación dispersa</td></tr>
<tr><td><a href="/docs/es/image_similarity_search.md">Búsqueda de imágenes con Milvus</a></td><td>Búsqueda semántica</td><td>búsqueda vectorial, campo dinámico</td></tr>
<tr><td><a href="/docs/es/multimodal_rag_with_milvus.md">RAG multimodal con Milvus</a></td><td>RAG</td><td>búsqueda vectorial, campo dinámico</td></tr>
<tr><td><a href="/docs/es/multimodal_rag_with_milvus.md">Búsqueda multimodal con multivectores</a></td><td>Búsqueda semántica</td><td>multivector, búsqueda híbrida</td></tr>
<tr><td><a href="/docs/es/graph_rag_with_milvus.md">RAG gráfica con Milvus</a></td><td>RAG</td><td>búsqueda gráfica</td></tr>
<tr><td><a href="/docs/es/contextual_retrieval_with_milvus.md">Recuperación contextual con Milvus</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/hdbscan_clustering_with_milvus.md">Agrupación HDBSCAN con Milvus</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/use_ColPali_with_milvus.md">Utilizar ColPali para la recuperación multimodal con Milvus</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/quickstart_with_attu.md">Inicio rápido con Attu</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/use-async-milvus-client-with-asyncio.md">Utilizar AsyncMilvusClient con asyncio</a></td><td>AsyncIO</td><td>AsyncIO, búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/text_image_search.md">Búsqueda texto-imagen con Milvus</a></td><td>Búsqueda semántica</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/vector_visualization.md">Visualización vectorial</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/movie_recommendation_with_milvus.md">Recomendación de películas con Milvus</a></td><td>Sistema de recomendación</td><td>Búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/funnel_search_with_matryoshka.md">Búsqueda en embudo con Matryoshka Embeddings</a></td><td>Inicio rápido</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/question_answering_system.md">Sistema de respuesta a preguntas</a></td><td>Respuesta a preguntas</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/recommendation_system.md">Sistema de recomendación</a></td><td>Sistema de recomendación</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/video_similarity_search.md">Búsqueda por similitud de vídeos</a></td><td>Búsqueda semántica</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/audio_similarity_search.md">Búsqueda por similitud de audio</a></td><td>Búsqueda semántica</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/dna_sequence_classification.md">Clasificación de ADN</a></td><td>Clasificación</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/text_search_engine.md">Buscador de texto</a></td><td>Búsqueda semántica</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/image_deduplication_system.md">Deduplicación de imágenes</a></td><td>Deduplicación</td><td>búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/generating_milvus_query_filter_expressions.md">Generación de expresiones de filtro de consulta Milvus con modelos lingüísticos amplios</a></td><td>Filtrado de metadatos</td><td>búsqueda vectorial</td></tr>
</tbody>
</table>
